# shexp-demo

./: .gitignore  CMakeLists.txt  README.md  TODO.md
gamma/: README
gamma/src/: makesparse.cpp
lut/: README  lut10  lut13  lut14  lut15  lut3  lut4  lut5  lut6  lut7  lut8
res/: README  andi.exr  andi.shrgb  andi1.sph  ball-200.sph  ball-30.sph  ball.mtl  fence2-200.sph  fence2.obj.mtl  fence4-200.sph  fence4.mtl  frag.glsl  frag_show_normal.glsl  frag_show_tessellation.glsl  grace.shrgb  hifreq_scene.sph  l1.shrgb  lut8  null.shrgb  pisa.shrgb  spheres1000  top.shrgb  vert.glsl  vert.glsl.template  vert_sh10.glsl  vert_sh12.glsl  vert_sh15.glsl  vert_sh3.glsl  vert_sh4.glsl  vert_sh5.glsl  vert_sh6.glsl  vert_sh7.glsl  vert_sh8.glsl  vert_show_clusterid.glsl
res/scene1/: scene1.sph
res/scene2/: scene2.sph  scene2_moved2.sph
res/scene3/: scene.tungsten.json  scene3.sph
shaders/: frag.glsl  vert.glsl  vert_show_clusterid.glsl
src/: LHcubemap.hpp  arealight.hpp  display_texture.hpp  loadgamma.hpp  loadlut.hpp  loadspheres.hpp  loadtexture.hpp  main.cpp  mock_shexp.hpp  mtsampler.hpp  readgamma.hpp  receiver_cluster.hpp  sh.cpp  sh.hpp  shlut.hpp  shorder.hpp  sphere_hierarchy.hpp  sphere_hierarchy_visualize.hpp  util.hpp
src/lib/: consolelog.hpp  imgui_internal.h  m_math.h  yocto_obj.h
src/math/: matmath_extra.hpp  vecmath.hpp
src/rt/: aabox.hpp  ray.hpp  (+2 more)
util/: .gitignore  Makefile  ad.cpp  cubemapdiff.cpp  env_flip.cpp  env_sh.cpp  lut12  makelut.cpp  readgamma.hpp  sh.cpp  sh2img.cpp  shexp.hpp  shlog.hpp  shproject.hpp  shtxtdiff.cpp  test.cpp
(+14 files in other folders)
